# vibe2025

./: .gitignore  pyproject.toml
tests/: __init__.py  test_converter.py
tests/forex/: test_converter.py
tests/secure_storage/: test_storage.py
tests/signed_docs/: test_bash_gen_keys.py  test_doc_processor.py  test_sign_functions.py
tests/signed_docs/assets/: document_key_private.pem  document_key_public.pem  gen_keys.sh
vibe2025/: __init__.py  forex.py  main.py
vibe2025/app_cli/: a.py  a_old.py  setup.py
vibe2025/forex/: cache.py  forex.py  main.py  models.py
vibe2025/location/: a.py
vibe2025/secure_storage/: client.py  service.py
vibe2025/signed_docs/: client.py  crypto_utils.py  doc.json  document_app.py  model.py  processor.py  service.py  test_app.py  test_app2.py
vibe2025/time_otp/: totp_one.py
vibe2025/uptime_checker/: browser.py  checker.py  config.json  config.py  main.py  models.py  prompts.md  results.json
vibe2025/weather/: base.py  example_bielsko.py  example_windy.py  model.py  open_meteo.py  windy_service.py
